@@ -6188,6 +6188,13 @@ retry:
 		}
 	}
 
+	void session_impl::update_auto_sequential()
+	{
+		for (torrent_map::iterator i = m_torrents.begin()
+			, end(m_torrents.end()); i != end; ++i)
+			i->second->update_auto_sequential();
+	}
+
 	void session_impl::update_proxy()
 	{
 		// in case we just set a socks proxy, we might have to
